[package]
name = "utf8-builder"
version = "0.2.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/utf8-builder"
homepage = "https://magiclen.org/utf8-builder"
keywords = ["utf-8", "string", "character"]
categories = ["no-std", "encoding"]
description = "Build and validate UTF-8 data from chunks. Each chunk doesn't have to be a complete UTF-8 data."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
utf8-width = "0.1"